[General] Fix Class Filter flicker

--- a/common/assets/css/main.css
+++ b/common/assets/css/main.css
@@ -54,6 +54,7 @@ body {
     height: 25px;
     float: left;
     opacity: 0.5;
+    cursor: pointer;
 }
 
 .selected {
